@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>net.ptidej.padl</groupId>
-	<artifactId>padl-creator-javafile-classfile</artifactId>
+	<artifactId>padl-creator-javafile-classfile-tests</artifactId>
 	<name>PADL Creator JavaFile-ClassFile Tests</name>
 
 	<parent>
@@ -13,7 +13,6 @@
 		<artifactId>all-ptidej</artifactId>
 		<version>1.0.0</version>
 	</parent>
-
 
 	<build>
 		<plugins>
@@ -25,6 +24,26 @@
 					<compilerArgs>
 						<arg>-proc:none</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+			<!-- Must export/open some hidden package to run PADL Creator
+			JavaFile (JavaC) -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.3</version>
+				<configuration>
+					<argLine>
+						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+					</argLine>
+					<excludes>
+						<!-- Excluded on purpose -->
+						<exclude>**/*Test.java</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 			<!-- Must generate the test-jar for dependent tests -->
@@ -40,41 +59,22 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- Must export/open some hidden package to run PADL Creator
-			JavaFile (JavaC) -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
-				<configuration>
-					<argLine>
-						--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-					</argLine>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>net.ptidej.cpl</groupId>
+			<artifactId>cpl-core</artifactId>
+			<version>1.0.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -121,7 +121,5 @@
 			<version>1.0.0</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-
 </project>
